# votist

./: .flake8  .gitignore  Dockerfile  README.md  deployment.yml  docker-compose.yml  notebook.ipynb  pyproject.toml  requirements.txt
docs/reports/: report_1000.html  report_500.html
tests/: conftest.py  load_test.py  mocks.py  test_votist.py
votist/: main.py
votist/routes/: predict.py
votist/schemas/: payment.py  prediction.py
votist/services/: fraud_model.py
