[tool.poetry]
name = "votist"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
wemake-python-styleguide = "^0.15.2"
pytest-asyncio = "^0.14.0"
httpx = "^0.17.1"
pandas = "^1.2.3"
ipykernel = "^5.5.3"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
pytest-cov = "^2.11.1"
locust = "^1.5.1"
pycparser = "^2.20"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
